--- a/app/assets/stylesheets/_variables.sass.scss
+++ b/app/assets/stylesheets/_variables.sass.scss
@@ -2,3 +2,14 @@ $blue-color: #03a9f4;
 $white-color: #ffffff;
 $red-color: #d9534f;
 $green-color: #5cb85c;
+
+$dark-blue: #435d7d;
+$light-blue: #03a9f4;
+$main-blue: #677fff;
+$rounded: 25px;
+$shadow: 4px 2px 13px rgba(0, 0, 0, 0.25);
+$black: #000000;
+$background-body: #fbfbfb;
+
+//Color-text
+$grey-text: #acacac;
