Styles loaded and input to checkin/out was added

--- a/app/assets/stylesheets/application.sass.scss
+++ b/app/assets/stylesheets/application.sass.scss
@@ -1,1 +1,35 @@
 // Entry point for your Sass build
+@import "./application.bootstrap.scss";
+@import "./variables";
+
+//body
+body {
+  background-color: $background-body;
+}
+
+//Form group style
+.form-group {
+  display: flex;
+  flex-wrap: wrap;
+  label {
+    width: 100%;
+    font-size: 18px;
+  }
+  input {
+    width: 100%;
+    height: 50px;
+    border-radius: $rounded;
+    border: none;
+    font-size: 18px;
+    box-shadow: $shadow;
+    -moz-appearance: textfield;
+    input::-webkit-outer-spin-button,
+    input::-webkit-inner-spin-button {
+      -webkit-appearance: none;
+      margin: 0;
+    }
+  }
+  p {
+    color: $grey-text;
+  }
+}
