Add first styles to new_ employee view

--- a/app/views/employees/index.html.erb
+++ b/app/views/employees/index.html.erb
@@ -1,7 +1,7 @@
 <h1>Employees' List</h1>
 <div class="container">
   <div class="row m-5">
-    <div class="input-group col me-5">
+    <div class="input-group col w-25 me-5">
       <input type="text" class="input-text form-control col-3 box" placeholder="  Search Employee"/>
       <div class="input-group-append">
         <button class="btn btn-light">Search</button>
