--- a/app/views/employees/new.html.erb
+++ b/app/views/employees/new.html.erb
@@ -1,21 +1,40 @@
 <h1>Add new employee</h1>
 
-<%= form_for @employee do%>
-  <div>
-    <label for="name">Name:</label>
-    <input placeholder="Exam. Luis Perez" type="text" name="name"/>
-  </div>
-  <div>
-    <label for="email">Email:</label>
-    <input type="email" placeholder="example@example.com" name="email"/>
-  </div>
-  <div>
-    <label for="position">Position:</label>
-    <input type="text" placeholder="example@example.com" name="position"/>
-  </div>
-  <div>
-    <label for="private_number">Private Number:</label>
-    <input type="password" placeholder="Exam: 123456" name="private_number"/>
-  </div>
-  <button >Add Employee</button>
-<%end%>
+<div class="container">
+  <%= form_with(model: @employee, local: true) do |form|%>
+
+    <div class="form-group">
+      <%= form.label :name, "Name:", class:"form-label" %>
+      <%= form.text_field :name, class:"form-control box", placeholder:"Ex: John Smith" %>
+    </div>
+
+    <div class="form-group">
+      <%= form.label :email, "E-mail:", class:"form-label" %>
+      <%= form.email_field :email, class:"form-control box", placeholder:"Ex: jsmith@example.com"  %>
+    </div>
+
+    <div class="form-group">
+      <%= form.label :position, "Position:", class:"form-label" %>
+      <%= form.text_field :position, class:"form-control box", placeholder:"Ex: Accountant"  %>
+    </div>
+
+    <div class="form-group">
+      <%= form.label :private_number, "Private Number:", class:"form-label" %>
+      <%= form.password_field :private_number, class:"form-control box", placeholder:"Ex: 1245123"  %>  
+    </div>
+
+    <div class="form-group">
+      <label for="branch" class="form-label">Branch:</label>
+      <select name="branch" class="form-select box">
+        <option value="Arcor">Arcor</option>
+        <option value="Adidas">Adidas</option>
+        <option value="Nike">Nike</option>
+        <option value="Manaos">Manaos</option>
+      </select>
+    </div>
+
+    <div class="form-group">
+      <%= form.submit "+ Add", class:"box btn btn-primary" %>
+    </div>
+  <%end%>
+</div>
