--- a/app/views/employees/edit.html.erb
+++ b/app/views/employees/edit.html.erb
@@ -1,22 +1,55 @@
-<h1>Add new employee</h1>
+<h1>Edit</h1>
 
-<%= form_for @employee do%>
-  <div>
-    <label for="name">Name:</label>
-    <input placeholder="Exam. Luis Perez" type="text" name="name" value="<%= @employee.name %>"/>
-  </div>
-  <div>
-    <label for="email">Email:</label>
-    <input type="email" placeholder="example@example.com" name="email" value ="<%= @employee.email%>"/>
-  </div>
-  <div>
-    <label for="position">Position:</label>
-    <input type="text" placeholder="example@example.com" name="position" value="<%= @employee.position %>"/>
-  </div>
-  <div>
-    <label for="private_number">Private Number:</label>
-    <input type="password" placeholder="Exam: 123456" name="private_number" value ="<%= @employee.private_number%>"/>
-  </div>
-  <button >Edit Employee</button>
+<div>
+  
+</div>
 
-<%end%>
+<div class="container">
+  <%= form_with(model: @employee, local: true) do |form|%>
+
+    <div class="form-group">
+      <%= form.label :name, "Name:", class:"form-label" %>
+      <%= form.text_field :name, class:"form-control box", placeholder:"Ex: John Smith" %>
+    </div>
+
+    <div class="form-group">
+      <%= form.label :email, "E-mail:", class:"form-label" %>
+      <%= form.email_field :email, class:"form-control box", placeholder:"Ex: jsmith@example.com"  %>
+    </div>
+
+    <div class="form-group">
+      <label for="role" class="form-label">Position:</label>
+      <select name="role" class="form-select box">
+        <% @roles.each do |role|%>
+          <% if role.id == @employee.role_id %>
+            <option selected value="<%=role.id%>"><%=role.description%></option>  
+          <% else %>
+            <option value="<%=role.id%>"><%=role.description%></option>  
+          <% end %>
+        <%end%>
+      </select>
+    </div>
+
+    <div class="form-group">
+      <%= form.label :private_number, "Private Number:", class:"form-label" %>
+      <%= form.password_field :private_number, class:"form-control box", placeholder:"Ex: 1245123"  %>  
+    </div>
+
+    <div class="form-group">
+      <label for="branch" class="form-label">Branch:</label>
+      <select name="branch" class="form-select box">
+        <% @branches.each do |branch|%>
+          <% if branch.id == @employee.branch_id %>
+            <option selected value="<%=branch.id%>"><%=branch.name%></option>  
+          <% else %>
+            <option value="<%=branch.id%>"><%=branch.name%></option>  
+          <% end %>
+        <%end%>
+      </select>
+    </div>
+
+    <div class="form-group">
+      <%= form.submit "+ Add Change", class:"box btn btn-primary" %>
+    </div>
+  <%end%>
+</div>
