--- a/app/views/employees/new.html.erb
+++ b/app/views/employees/new.html.erb
@@ -1,5 +1,9 @@
 <h1>Add new employee</h1>
 
+<div>
+  
+</div>
+
 <div class="container">
   <%= form_with(model: @employee, local: true) do |form|%>
 
@@ -14,8 +18,12 @@
     </div>
 
     <div class="form-group">
-      <%= form.label :position, "Position:", class:"form-label" %>
-      <%= form.text_field :position, class:"form-control box", placeholder:"Ex: Accountant"  %>
+      <label for="role" class="form-label">Position:</label>
+      <select name="role" class="form-select box">
+        <% @roles.each do |role|%>
+          <option value="<%=role.id%>"><%=role.description%></option>
+        <%end%>
+      </select>
     </div>
 
     <div class="form-group">
@@ -26,10 +34,9 @@
     <div class="form-group">
       <label for="branch" class="form-label">Branch:</label>
       <select name="branch" class="form-select box">
-        <option value="Arcor">Arcor</option>
-        <option value="Adidas">Adidas</option>
-        <option value="Nike">Nike</option>
-        <option value="Manaos">Manaos</option>
+        <% @branches.each do |branch|%>
+          <option value="<%=branch.id%>"><%=branch.name%></option>
+        <%end%>
       </select>
     </div>
 
