Add a partial form to employees index
Was added a partial form to employees/index which makes both edit and
create actions

--- a/app/assets/stylesheets/application.sass.scss
+++ b/app/assets/stylesheets/application.sass.scss
@@ -2,10 +2,9 @@
 @import "application.bootstrap.scss";
 @import "variables.sass.scss";
 @import "button_colors.sass.scss";
-@import './components/box.scss';
-@import './components/input_text.scss';
-@import './components/button.scss';
-@import './employees/index.scss';
+@import './employees/box.scss';
+@import './employees/input_text.scss';
+@import './employees/button.scss';
 
 //body
 body {
