--- a/app/views/employees/_form.html.erb
+++ b/app/views/employees/_form.html.erb
@@ -1,10 +1,4 @@
-<h1>Edit</h1>
-
-<div>
-  
-</div>
-
-<div class="container">
+<div class="container form">
   <%= form_with(model: @employee, local: true) do |form|%>
 
     <div class="form-group">
@@ -49,7 +43,8 @@
     </div>
 
     <div class="form-group">
-      <%= form.submit "+ Add Change", class:"box btn btn-primary" %>
+      <%= form.submit "+ Submit", class:"box btn btn-primary" %>
+      <%= link_to 'X Cancel', employees_path,  class: "btn btn-danger box" %>
     </div>
   <%end%>
 </div>
