--- a/app/views/employees/index.html.erb
+++ b/app/views/employees/index.html.erb
@@ -1,13 +1,23 @@
 <h1>Employees' List</h1>
+
+<% if @form %>
+  <%=render "employees/form"%>
+  <hr/>
+<% end %>
+
 <div class="container">
   <div class="row m-5">
-    <div class="input-group col w-25 me-5">
-      <input type="text" class="input-text form-control col-3 box" placeholder="  Search Employee"/>
-      <div class="input-group-append">
-        <button class="btn btn-light">Search</button>
+    <%= form_tag employees_path, method: :get, class:"col-6" do%>
+      <div class="input-group me-5">
+        <input type="text" name="name" class="input-text form-control col-3 box" placeholder="  Search Employee"/>
+        <div class="input-group-append">
+          <%= submit_tag 'Search', class: "btn btn-light" %>
+        </div>
       </div>
-    </div>
-    <%= link_to '+ Add employee', new_employee_path, class:"btn btn-primary col-2 box ms-5"%>
+    <% end %>
+    <% unless @form %>
+      <%= link_to '+ Add employee', new_employee_path, class:"btn btn-primary col-2 box ms-5 align-end"%>
+    <% end %>
   </div>
   <table class="table table-light table-hover box">
     <thead>
