Feuture to do check in/out working

--- a/app/views/records/new.html.erb
+++ b/app/views/records/new.html.erb
@@ -11,9 +11,7 @@
           <input type="number" placeholder="Example: 123456"/>
           <p>Put your private number and press validate button to check in or check out.</p>
         </div>
-        <div class="d-grid gap-2 col-6 mx-auto">
-          <button type="button" class="btn btn-success btn-lg">Validate</button>
-        </div>
+          <button class="btn btn-success btn-lg">Validate</button>
       <% end%>
     </div>
   </div>
