Add final design to employees_form
Added final design to employees' form and corrected indentation in some
files

--- a/app/assets/stylesheets/application.sass.scss
+++ b/app/assets/stylesheets/application.sass.scss
@@ -3,7 +3,7 @@
 @import "variables.sass.scss";
 @import "button_colors.sass.scss";
 @import './employees/box.scss';
-@import './employees/input_text.scss';
+@import './employees/form.scss';
 @import './employees/button.scss';
 
 //body
