--- a/app/assets/stylesheets/employees/form.scss
+++ b/app/assets/stylesheets/employees/form.scss
@@ -1,3 +1,14 @@
-.form-group{
-   
+.employee_form{
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: space-around;
+
+  .form-group{
+    width: 30%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+  }
 }
