--- a/app/views/employees/index.html.erb
+++ b/app/views/employees/index.html.erb
@@ -2,12 +2,11 @@
 
 <% if @form %>
   <%=render "employees/form"%>
-  <hr/>
 <% end %>
 
 <div class="container">
   <div class="row m-5">
-    <%= form_tag employees_path, method: :get, class:"col-6" do%>
+    <%= form_tag employees_path, method: :get, class:"col-8" do%>
       <div class="input-group me-5">
         <input type="text" name="name" class="input-text form-control col-3 box" placeholder="  Search Employee"/>
         <div class="input-group-append">
@@ -40,7 +39,7 @@
           <td class="text-center"><%=employee.email%></td>
           <td class="text-center">
             <%= link_to 'Edit', edit_employee_path(employee), class: "btn btn-primary box" %>
-            <%= link_to 'Delete', employee_path(employee),  class: "btn btn-danger box" %>
+            <%= link_to 'Deactivate', employee_path(employee),  class: "btn btn-danger box" %>
           </td>
         <%end%>
       <%end%>
