--- a/app/views/branches/index.html.erb
+++ b/app/views/branches/index.html.erb
@@ -1,17 +1,26 @@
-<p class="alert alert-success"><%= notice %></p>
+<p style="color: green"><%= notice %></p>
 
 <div class="container">
 
-<div class="d-flex align-items-center rounded-pill bg-success">
-<input class="" placeholder="Search branch">
-<i class="bi bi-search"></i>
-</div>
+
+ <div class="row">
+
+   <div class="col-md-3">
+     <input class="form-control" type="search" placeholder="Search Branch" aria-label="Search">
+   </div> 
+
+    <button class="btn btn-success col-md-1" type="submit"> <i class="bi bi-search"></i></button>
+
+    <div class="d-flex justify-content-end"><%= link_to "New branch", new_branch_path, class: 'btn btn-primary col-md-2 bi bi-plus' %></div>
+    
+ </div> 
 
 
-<%= link_to "New branch", new_branch_path, class: 'btn btn-primary' %>
 
 
-<table class="table table-hover text-center">
+
+
+<table class="table table-hover text-center border rounded-pill mt-5">
  <thead>
     <tr>
       <th scope="col"># Branch</th>
