--- a/app/views/branches/index.html.erb
+++ b/app/views/branches/index.html.erb
@@ -5,13 +5,13 @@
 
  <div class="row">
 
-   <div class="col-md-3">
-     <input class="form-control" type="search" placeholder="Search Branch" aria-label="Search">
-   </div> 
+   <form class="col-md-3" action="/search">
+     <input class="form-control" type="search" name="q" placeholder="Search Branch" aria-label="Search">
+   </form> 
 
     <button class="btn btn-success col-md-1" type="submit"> <i class="bi bi-search"></i></button>
 
-    <div class="d-flex justify-content-end"><%= link_to "New branch", new_branch_path, class: 'btn btn-primary col-md-2 bi bi-plus' %></div>
+    <div class="d-flex justify-content-end"><%= link_to "New branch", new_branch_path, class: 'btn btn-primary col-md-2 bi bi-plus shadow' %></div>
     
  </div> 
 
@@ -20,7 +20,7 @@
 
 
 
-<table class="table table-hover text-center border rounded-pill mt-5">
+<table class="table table-hover text-center shadow p-3 mb-5 rounded mt-5">
  <thead>
     <tr>
       <th scope="col"># Branch</th>
