--- a/app/views/branches/index.html.erb
+++ b/app/views/branches/index.html.erb
@@ -1,24 +1,15 @@
 <p style="color: green"><%= notice %></p>
 
 <div class="container">
-
-
  <div class="row">
-
    <form class="col-md-3" action="/search">
      <input class="form-control" type="search" name="q" placeholder="Search Branch" aria-label="Search">
    </form> 
-
     <button class="btn btn-success col-md-1" type="submit"> <i class="bi bi-search"></i></button>
-
-    <div class="d-flex justify-content-end"><%= link_to "New branch", new_branch_path, class: 'btn btn-primary col-md-2 bi bi-plus shadow' %></div>
-    
+    <div class="d-flex justify-content-end">
+      <%= link_to "New branch", new_branch_path, class: 'btn btn-primary col-md-2 bi bi-plus shadow' %>
+    </div>
  </div> 
-
-
-
-
-
 
 <table class="table table-hover text-center shadow p-3 mb-5 rounded mt-5">
  <thead>
@@ -29,7 +20,6 @@
       <th scope="col">Actions</th>
     </tr>
   </thead>
-
   <tbody>
   <% num = 0 %>
   <% @branches.each do |branch| %>
