Flash messages were added

--- a/app/views/records/new.html.erb
+++ b/app/views/records/new.html.erb
@@ -1,5 +1,10 @@
 <!-- inside app/views/home/index.html.erb -->
 <div class="container">
+  <% flash.each do |name, msg| %>
+    <div class="alert alert-<%= name %>">
+      <%= msg %>
+    </div>
+  <% end%>
   <div class="vh-100 row d-flex align-items-center ">
     <div class="col-6">
       Reloj
@@ -8,7 +13,7 @@
       <%= form_for @record do%>
         <div class="form-group">
           <label class="label">Private Number</label>
-          <input type="number" placeholder="Example: 123456"/>
+          <input type="number" placeholder="Example: 123456" name="private_number"/>
           <p>Put your private number and press validate button to check in or check out.</p>
         </div>
           <button class="btn btn-success btn-lg">Validate</button>
