new method from index view

--- a/app/views/branches/index.html.erb
+++ b/app/views/branches/index.html.erb
@@ -12,6 +12,19 @@
     </div>
  </div> 
 
+
+<h1>New branch</h1>
+
+<%= render "form", branch: @branch %>
+
+<br>
+
+<div>
+  <%= link_to "Back to branches", branches_path %>
+</div>
+
+
+
 <table class="table table-hover text-center shadow p-3 mb-5 rounded mt-5">
  <thead>
     <tr>
