--- a/app/views/branches/_form.html.erb
+++ b/app/views/branches/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: branch) do |form| %>
+<%= form_with(model: branch, data: {controller: "brances"}) do |form| %>
   <% if branch.errors.any? %>
     <div style="color: red">
       <h2><%= pluralize(branch.errors.count, "error") %> prohibited this branch from being saved:</h2>
@@ -20,7 +20,6 @@
     <%= form.label :address, style: "display: block" %>
     <%= form.text_field :address %>
   </div>
-
   <div>
     <%= form.submit %>
   </div>
