--- a/app/views/branches/_form.html.erb
+++ b/app/views/branches/_form.html.erb
@@ -11,16 +11,21 @@
     </div>
   <% end %>
 
-  <div>
-    <%= form.label :name, style: "display: block" %>
-    <%= form.text_field :name %>
+
+  
+<div class="row">
+  <div class="col-md-4">
+  <%= form.text_field :name, class: 'rounded-pill shadow form-control col-md-4',  placeholder: "Branch name" %>
   </div>
 
-  <div>
-    <%= form.label :address, style: "display: block" %>
-    <%= form.text_field :address %>
+  <div class="col-md-4">
+    <%= form.text_field :address, class: 'rounded-pill shadow form-control col-md-4',  placeholder: "Address here" %>
   </div>
-  <div>
-    <%= form.submit %>
+
+  <div class="d-flex justify-content-end col-md-4">  
+    <%= form.submit "+ Add", class: "btn shadow border btn-blue border-muted rounded-pill col-md-4" %>    
+    <%= link_to "Close", branches_path, class: 'rounded-pill border border-muted btn btn-red bi bi-x shadow col-md-4' %>
   </div>
+</div>
+
 <% end %>
