--- a/app/views/branches/new.html.erb
+++ b/app/views/branches/new.html.erb
@@ -1,9 +1,4 @@
+<div class="container">
 <h1>New branch</h1>
-
 <%= render "form", branch: @branch %>
-
-<br>
-
-<div>
-  <%= link_to "Back to branches", branches_path %>
 </div>
