i modified the spaces  in all .html.erb files

--- a/app/assets/stylesheets/_variables.sass.scss
+++ b/app/assets/stylesheets/_variables.sass.scss
@@ -1,4 +1,4 @@
-$blue-color: #03A9F4;
+$blue-color: #03a9f4;
 $white-color: #ffffff;
-$red-color: #D9534F;
-$green-color: #5CB85C;
+$red-color: #d9534f;
+$green-color: #5cb85c;
