--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,13 +17,13 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item active">
-            <a class="nav-link" href="#">Employees</span></a>
+            <a class="nav-link" href="#"><i class="bi bi-person"></i>Employees</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Branches</a>
+          <a class="nav-link" href="#"><i class="bi bi-shop"></i>Branches</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Reports</a>
+          <a class="nav-link" href="#"><i class="bi bi-bar-chart-line"></i>Reports</a>
         </li>
       </ul>
     </div>
