Typo error was corrected and rebase master

--- a/app/views/records/new.html.erb
+++ b/app/views/records/new.html.erb
@@ -16,7 +16,7 @@
           <input type="number" placeholder="Example: 123456" name="private_number"/>
           <p>Put your private number and press validate button to check in or check out.</p>
         </div>
-          <button class="btn btn-success btn-lg">Validate</button>
+          <button class="btn btn-success btn-lg">Check</button>
       <% end%>
     </div>
   </div>
