--- a/app/views/records/new.html.erb
+++ b/app/views/records/new.html.erb
@@ -9,7 +9,7 @@
     <div class="col-6">
       Reloj
     </div>
-    <div class="col-6">
+    <div class="col-6 check">
       <%= form_for @record do%>
         <div class="form-group">
           <label class="label">Private Number</label>
