Creation of navigation bar and clock
we used stimulus to manage javascript files, we generated a stimulus controller and made the function for the clock

Co-authored-by: Javi1499 <Javi1499@users.noreply.github.com>

--- a/app/assets/stylesheets/_variables.sass.scss
+++ b/app/assets/stylesheets/_variables.sass.scss
@@ -2,6 +2,7 @@ $blue-color: #03a9f4;
 $white-color: #ffffff;
 $red-color: #d9534f;
 $green-color: #5cb85c;
+$navbar-text: #EBEAEA;
 
 $dark-blue: #435d7d;
 $light-blue: #03a9f4;
