--- a/app/views/records/new.html.erb
+++ b/app/views/records/new.html.erb
@@ -1,22 +1,22 @@
 <!-- inside app/views/home/index.html.erb -->
-<div class="container">
+<div class="container" data-controller="clock">
   <% flash.each do |name, msg| %>
     <div class="alert alert-<%= name %>">
       <%= msg %>
     </div>
   <% end%>
-  <div class="vh-100 row d-flex align-items-center ">
+  <div class="vh-100 row d-flex align-items-center" >
     <div class="col-6">
-      Reloj
+      <span  class="clock-style" data-clock-target="reloj"></span>
     </div>
     <div class="col-6 check">
       <%= form_for @record do%>
         <div class="form-group">
           <label class="label">Private Number</label>
-          <input type="number" placeholder="Example: 123456" name="private_number"/>
+          <input class="mt-2 mb-2 form-control" type="number" placeholder="Example: 123456" name="private_number"/>
           <p>Put your private number and press validate button to check in or check out.</p>
         </div>
-          <button class="btn btn-success btn-lg">Check</button>
+        <button class="btn btn-success btn-lg">Check</button>
       <% end%>
     </div>
   </div>
