--- a/app/assets/stylesheets/_navbar.sass.scss
+++ b/app/assets/stylesheets/_navbar.sass.scss
@@ -15,25 +15,23 @@
 .navbar-light .navbar-nav .nav-link {
   color: $navbar-text;
   font-weight: 600;
+  :hover {
+    color: $white-color;
+  }
 }
-
-.navbar-light .navbar-nav .nav-link:hover {
-  color: $white-color;
-}
-
 
 .navbar-light .navbar-brand {
   color: $white-color;
   margin-left: 5rem;
   font-weight: 800;
   font-size: 1.5rem;
+
+  :hover {
+    color: $white-color;
+  }
 }
 
-.navbar-light .navbar-brand:hover {
-  color: $white-color;
-}
-
-.clock-icon-size{
+.clock-icon-size {
   font-size: 1rem;
   margin: 0 0.1rem 0 0.1rem;
 }
