--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -12,11 +12,11 @@
             </li>
           <%elsif !admin_signed_in?%>
             <li class="nav-item active">
-              <%= link_to 'Back to check in/out', new_record_path, class: 'btn btn-primary rounded' %>
+              <%= link_to 'Back to check in/out', new_record_path, class: 'btn btn-primary rounded-pill' %>
             </li>
           <%else%>
             <li class="nav-item active">
-              <%= link_to 'Employees', employees_path, class: 'nav-link bi bi-person rounded' %>
+              <%= link_to 'Employees', employees_path, class: 'nav-link bi bi-person rounded-pill' %>
             </li>
             <li class="nav-item">
               <%= link_to 'Branches', branches_path, class: 'nav-link bi bi-shop'%> 
