--- a/app/views/branches/_attendance.html.erb
+++ b/app/views/branches/_attendance.html.erb
@@ -1,1 +1,22 @@
-<h1>Hello</h1>
+  <table class=" col-6 table table-hover text-center shadow p-3 mb-5 rounded" style="border-color:white;">
+    <thead class="border" style="border-color:white;">
+      <tr>
+        <th scope="col"># Employee</th>
+        <th scope="col">Name</th>
+        <th scope="col">Position</th>
+        <th scope="col">Check In</th>
+        <th scope="col">Check Out</th>
+      </tr>
+    </thead>
+    <tbody>
+      <% @employees.each_with_index do |employee, index|%>
+        <tr>
+          <th scope="row"><%= employee.id%></th>
+          <td><%= employee.name%></td>
+          <td><%= employee.position %></td>
+          <td><%= employee.check_in.localtime.to_formatted_s(:short) %></td>
+          <td><%= employee.check_out !=nil ? employee.check_out.localtime.to_formatted_s(:short) : '' %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
