--- a/app/views/branches/show.html.erb
+++ b/app/views/branches/show.html.erb
@@ -1,9 +1,34 @@
-<p style="color: green"><%= notice %></p>
-<%= render @branch %>
-<hr/>
-<div>
-  <%= link_to "Back to branches", branches_path %>
-</div>
-<div>
-<%= render @attendance %>
+<div class="container pb-4">
+  <p style="color: green"><%= notice %></p>
+  <%= render @branch %>
+  <hr />
+  <div><%= link_to "Back to branches", branches_path %></div>
+  <div class="row">
+    <div class="row mb-3">
+      <div class="col-3">
+        <select class="form-select" aria-label="Default select example">
+          <option selected value="1">Attendance by day</option>
+        </select>
+      </div>
+      <div class="col-9">
+        <h3 class="fs-2 fw-bold ml-4 dark-blue">
+          Attendance <%= "#{@employees.size}/#{@attendance_total}" %>
+        </h3>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-7 d-flex justify-content-center">
+      <div class="w-75 table-attendance">
+        <%= render partial: 'attendance' %>
+      </div>
+    </div>
+    <div class="col-5">
+      <div class="w-75">
+        <div id="search_by_day">
+          <%= render :partial => 'branches/filter' %>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
