Chart was added with average hours by month

--- a/app/views/branches/_attendance_by_month.html.erb
+++ b/app/views/branches/_attendance_by_month.html.erb
@@ -1,1 +1,4 @@
-<h1>Hola mundo</h1>
+<div class="row">
+	<h2>Average hours by month </h2>
+  <div class="col-12"><%= column_chart @attendance_by_month %></div>
+</div>
