Devise's forms are finished
Co-authored-by: EliasUR <eliasrodriguez2002@hotmail.com>

--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -22,7 +22,7 @@
               <%= link_to 'Branches', branches_path, class: 'nav-link bi bi-shop'%> 
             </li>
             <li>
-              <%= link_to 'sign out xd', destroy_admin_session_path, 'data-turbo-method': :delete, class: 'btn btn-danger'%>
+              <%= link_to 'Sign out', destroy_admin_session_path, 'data-turbo-method': :delete, class: 'btn btn-danger rounded-pill'%>
             </li>
           <%end%>
       </ul>
