--- a/app/views/branches/edit.html.erb
+++ b/app/views/branches/edit.html.erb
@@ -1,7 +1,9 @@
-<h1>Editing branch</h1>
-<%= render "form", branch: @branch %>
-<br>
-<div>
-  <%= link_to "Show this branch", @branch %> |
-  <%= link_to "Back to branches", branches_path %>
+<div class="container">
+  <h1>Editing branch</h1>
+  <%= render "form", branch: @branch %>
+  <br>
+  <div>
+    <%= link_to "Show this branch", @branch %>
+    <%= link_to "Back to branches", branches_path %>
+  </div>
 </div>
