--- a/app/views/branches/show.html.erb
+++ b/app/views/branches/show.html.erb
@@ -1,7 +1,4 @@
-<p style="color: green"><%= notice %></p>
-<%= render @branch %>
-<div>
-  <%= link_to "Edit this branch", edit_branch_path(@branch) %> |
-  <%= link_to "Back to branches", branches_path %>
-  <%= button_to "Destroy this branch", @branch, method: :delete %>
+<div class="container">
+  <p style="color: green"><%= notice %></p>
+  <%= render @branch %>
 </div>
