Code improve with new syntax

--- a/app/views/branches/show.html.erb
+++ b/app/views/branches/show.html.erb
@@ -25,7 +25,7 @@
     <div class="col-5 d-flex justify-content-center">
       <div class="w-100">
         <div id="filter">
-          <%= render :partial => 'branches/filter' %>
+          <%= render partial: 'branches/filter' %>
         </div>
       </div>
     </div>
