--- a/app/views/branches/show.html.erb
+++ b/app/views/branches/show.html.erb
@@ -1,4 +1,4 @@
 <div class="container">
-  <p style="color: green"><%= notice %></p>
+  <p class="text-center m-3 alert-success" style="color: green"><%= notice %></p>
   <%= render @branch %>
 </div>
