--- a/app/views/branches/edit.html.erb
+++ b/app/views/branches/edit.html.erb
@@ -1,9 +1,9 @@
-<div class="container">
+<div class="container col-md-7">
   <h1>Editing branch</h1>
   <%= render "form", branch: @branch %>
   <br>
-  <div>
-    <%= link_to "Show this branch", @branch %>
-    <%= link_to "Back to branches", branches_path %>
+  <div class="d-flex justify-content-between mt-5">
+    <%= link_to "Show this branch", @branch, class:'btn btn-green col-auto p-2 rounded-pill col-md-4' %>
+    <%= link_to "Back to branches", branches_path, class:'btn btn-primary rounded-pill col-auto p-2 col-md-4' %>
   </div>
 </div>
