--- a/app/views/branches/show.html.erb
+++ b/app/views/branches/show.html.erb
@@ -20,6 +20,15 @@
       </div>
       <div data-showhide-target="attendance_by_month" >
         <%= render partial: 'attendance_by_month' %>
+    </div>
+    <div class="col-5 d-flex justify-content-center">
+      <div class="w-100">
+        <div id="filter">
+          <%= render partial: 'branches/filter' %>
+        </div>
+        <div id="filter">
+          <%= render partial: 'absences_by_month' %>
+        </div>
       </div>
       <div data-showhide-target="absence_by_month">
         <%= render partial: 'absence_by_month' %>
