--- a/app/views/roles/_edit_form.html.erb
+++ b/app/views/roles/_edit_form.html.erb
@@ -4,7 +4,7 @@
       <%= form_with(model: @role, local: true, class: 'form col-4 d-flex
       justify-content-center flex-wrap') do |form|%>
       <div class="form-group">
-        <%= form.label :description, "Description:", class:"form-label" %> <%=
+        <%= form.label "Description:", class:"form-label" %> <%=
         form.text_field :description, class:"form-control box", placeholder:"Ex:
         Assistant" %>
       </div>
