--- a/app/views/branches/_filter.html.erb
+++ b/app/views/branches/_filter.html.erb
@@ -1,15 +1,15 @@
-<%= form_tag filter_branch_path(@branch.id), method: :get, remote: true, class: 'filter' do %>
-  <div class="form-group w-75">
+<%= form_tag filter_branch_path, url: { controller: "meals", action: "filter" }, method: :get, remote: true, class: 'col-12 d-flex flex-nowrap align-items-center gap-3 mb-4' do %>
+  <div class="form-group col-3">
     <label>Filter by day</label>
     <%= date_field_tag :day, class:"form-date"%>
   </div>
-  <div class="form-group w-75 my-4">
+  <div class="form-group col-4">
     <label>Filter by role</label>
     <%= select_tag :role_id, options_from_collection_for_select(get_role, "id", "description"), prompt: "Select a role", class:"form-select"%>
   </div>
-  <div class="form-group w-75">
+  <div class="form-group col-3">
     <label>Filter by name</label>
     <%= text_field_tag :name%>
   </div>
-  <%= submit_tag 'Search', :name => nil, class:"btn btn-primary btn-lg mt-4 w-50" %>
+  <%= submit_tag 'Search', :name => nil, class:"btn btn-primary btn-lg mt-4 col-2" %>
 <% end %>
