--- a/app/views/branches/_filter.html.erb
+++ b/app/views/branches/_filter.html.erb
@@ -5,7 +5,7 @@
   </div>
   <div class="form-group col-4">
     <label>Filter by role</label>
-    <%= select_tag :role_id, options_from_collection_for_select(get_role, "id", "description"), prompt: "Select a role", class:"form-select"%>
+    <%= select_tag :role_id, options_from_collection_for_select(roles, "id", "description"), prompt: "Select a role", class:"form-select"%>
   </div>
   <div class="form-group col-3">
     <label>Filter by name</label>
